We were trying to implement Order page same as wishlist from Book store. Instead of creating the new table in the domain model we used the exiting Order table and removed the unused Orderitem table. After adding the provideOrder function in OrderController.php we are getting the below error, however we could not find the issue.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "cweagans/composer-patches": "^1.6",
         "sangram-bhavar/laundrywebsite": "^1.0",
         "launderywebcleaners/laundry-web-app": "dev-master",
-        "typo3/cms-felogin": "^9.5"
+        "typo3/cms-felogin": "^9.5",
+        "oliver-hader/session-service": "^1.1"
     },
     "repositories": {
         "local": {
