Custom URL funcationality added DB exported. This reverts commit 14195c3e29fc97bc092afef3368111aaa0c88715.

--- a/config/sites/laundry/config.yaml
+++ b/config/sites/laundry/config.yaml
@@ -52,11 +52,49 @@ routeEnhancers:
       product:
         type: PersistedAliasMapper
         tableName: tx_laundrywebapp_domain_model_product
-        routeFieldName: uid
+        routeFieldName: slug
       back:
         type: StaticValueMapper
         map:
           o: overview
+  Overview:
+    type: Extbase
+    extenstion: LaundryWebApp
+    plugin: Overview
+    defaultController: 'Dashboard::overview'
+    routes:
+      - {_controller: 'Dashboard::overview', routePath: '/'}
+      - {_controller: 'Dashboard::overview', routePath: '/{dashboard}/{action}'}
+    aspects:
+      dashboard:
+        type: PersistedAliasMapper
+        tableName: tx_laundrywebapp_domain_model_product
+        routeFieldName: slug
+      action:
+        type: StaticValueMapper
+        map:
+          o: overview
+  Order:
+    type: Extbase
+    extenstion: LaundryWebApp
+    plugin: NewOrder
+    defaultController: 'Order::show'
+    routes:
+      - {_controller: 'Order::show', routePath: '/'}
+      - {_controller: 'Order::add', routePath: '/add/{product}'}
+      - {_controller: 'Order::remove', routePath: '/remove/{product}'}
+      - {_controller: 'Order::purge', routePath: '/purge'}
+    aspects:
+      product:
+        type: PersistedAliasMapper
+        tableName: 'tx_laundrywebapp_domain_model_product'
+        routeFieldName: slug
+      back:
+        type: StaticValueMapper
+        map:
+          o: 'overview'
+
+
 routes:
   -
     route: robots.txt
